# walkers-editor

./: .gitignore  Cargo.toml  README.md  school.osm
src/: app.rs  main.rs
src/app/: editor.rs  places.rs  providers.rs  windows.rs
src/app/editor/: attribute2d.rs  consts.rs  visual.rs  visualizers.rs
src/app/editor/consts/: osm.rs
